sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: Boolean does not take parameters
        echange(k, k+1);
               ^AlgBubbleSort1:9: error: not found: value echanges
        echanges = true;
        ^